--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -66,8 +66,8 @@ git = 'https://github.com/paritytech/substrate.git'
 package = 'substrate-network'
 rev = 'd1cd01c74e8d5550396cb654f9a3f1b641efdf4c'
 
-[dependencies.offchain-node-runtime]
-package = "offchain-node-runtime"
+[dependencies.runtime]
+package = "runtime"
 path = './runtime'
 
 [dependencies.primitives]
