--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ['Anonymous']
 edition = '2018'
-name = 'offchain-node-runtime'
+name = 'runtime'
 version = '2.0.0'
 
 [dependencies]
@@ -98,7 +98,7 @@ version = '1.0.101'
 [dependencies.simple-json]
 default_features = false
 git = 'https://github.com/jimmychu0807/simple-json'
-version = '0.1.1'
+version = '0.1.2'
 
 [dependencies.sr-primitives]
 default_features = false
